# ShonenJumpRankings

./: .env  Cargo.toml  Dockerfile  README.md  cert.pem  fly.toml  key.pem  out.csv
src/: main.rs
src/api/: mod.rs  ranking_api.rs
src/models/: mod.rs  ranking_model.rs
src/repository/: mongodb_repo.rs
