[package]
name = "web_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3" , features = ["json", "msgpack", "uuid"]}
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.16.0"
serde = "1.0.136"
dotenv = "0.15.0"
image = "0.24.7"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 